<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_width="match_parent"
    >
    <include layout="@layout/base_toolbar"/>

    <android.support.design.widget.CoordinatorLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:background="?attr/colorPrimary"
                android:id="@+id/editTextParentLinearLayout"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.example.gokhantok.daily.CustomTextInputLayout
                    app:hintTextAppearance="@style/FloatingLabelTextAppearance"
                    android:id="@+id/toDoCustomTextInput"
                    android:gravity="top|center"
                    android:layout_width="match_parent"
                    android:layout_height="76dp"
                    >
                    <EditText
                        android:id="@+id/userToDoEditText"
                        android:hint="@string/title"

                        android:inputType="textAutoCorrect|textCapSentences"

                        android:textColor="@color/icons"
                        android:gravity="start"
                        android:layout_marginRight="32dp"
                        android:layout_marginLeft="45dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.example.gokhantok.daily.CustomTextInputLayout>

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/scrollView" >

                <LinearLayout
                    android:id="@+id/todoReminderAndDateContainerLayout"
                    android:layout_weight="1.5"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="0dp">


                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#46a6eb">

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:ems="10"
                            android:id="@+id/contentText"
                            android:textColor="@color/icons"
                            android:hint="@string/content"
                            android:layout_marginRight="16dp"
                            android:layout_marginLeft="16dp"
                            android:paddingTop="32dp" />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/takedPhoto"
                            android:padding="4dp"
                            android:layout_gravity="center" />

                    </FrameLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_weight=".5"
                        android:gravity="center"
                        android:layout_marginTop="32dp"
                        android:layout_marginLeft="36dp"
                        android:layout_marginRight="36dp"
                        android:layout_width="match_parent"
                        android:layout_height="0dp">

                        <ImageButton
                            android:layout_weight=".4"
                            android:background="@android:color/transparent"
                            android:id="@+id/userToDoReminderIconImageButton"
                            android:padding="8dp"
                            android:src="@drawable/ic_add_alarm_grey_200_24dp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:gravity="start"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:id="@+id/userToDoRemindMeTextView"
                            android:text="@string/remind_me"
                            android:textSize="16sp"
                            android:textColor="@color/secondary_text"
                            android:layout_weight="2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/toDoHasDateSwitchCompat"
                            android:layout_gravity="center"
                            android:padding="8dp"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/toDoEnterDateLinearLayout"
                        android:animateLayoutChanges="true"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="36dp"
                        android:layout_marginRight="36dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_height="0dp">

                        <LinearLayout

                            android:layout_width="match_parent"
                            android:gravity="top"
                            android:layout_weight="1"
                            android:layout_height="0dp"
                            android:padding="2dp">


                            <EditText
                                android:id="@+id/newTodoDateEditText"
                                android:editable="false"
                                android:gravity="center"
                                android:textIsSelectable="false"
                                android:focusable="false"
                                android:focusableInTouchMode="false"
                                android:layout_weight="1.5"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:text="  "
                                android:padding="4dp"
                                android:textColor="?attr/colorAccent"
                                android:gravity="center"
                                android:layout_weight=".2"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content" />
                            <EditText
                                android:id="@+id/newTodoTimeEditText"
                                android:focusable="false"
                                android:focusableInTouchMode="false"
                                android:gravity="center"
                                android:textIsSelectable="false"
                                android:editable="false"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content" />



                        </LinearLayout>

                        <TextView
                            android:layout_weight="2"
                            android:id="@+id/newToDoDateTimeReminderTextView"
                            android:textSize="14sp"
                            android:gravity="start"
                            android:text="@string/remind_date_and_time"
                            android:textColor="@color/secondary_text"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:padding="2dp" />

                    </LinearLayout>


                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/makeToDoFloatingActionButton"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_send_white_18dp"
            android:layout_height="wrap_content"
            app:layout_anchor="@id/editTextParentLinearLayout"
            app:layout_anchorGravity="bottom|right"
            app:fabSize="normal"
            android:layout_width="wrap_content"
            />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/takePhotoFloatingActionButton"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="190dp"
            android:src="@drawable/ic_add_photo"
            android:layout_height="wrap_content"
            app:layout_anchor="@id/editTextParentLinearLayout"
            app:layout_anchorGravity="bottom|right"
            app:fabSize="mini"
            android:layout_width="wrap_content"
            />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/recorderFloatingActionButton"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="140dp"
            android:src="@drawable/ic_recorder"
            android:layout_height="wrap_content"
            app:layout_anchor="@id/editTextParentLinearLayout"
            app:layout_anchorGravity="bottom|right"
            app:fabSize="mini"
            android:layout_width="wrap_content"
            />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/shareFloatingActionButton"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="90dp"
            android:src="@drawable/share4"
            android:layout_height="wrap_content"
            app:layout_anchor="@id/editTextParentLinearLayout"
            app:layout_anchorGravity="bottom|right"
            app:fabSize="mini"
            android:layout_width="wrap_content"
            />


    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>
